@@ -7,6 +7,7 @@ Parser          username        Name
 ----------      -----------     -----
 AWK             jkoshy          Joseph Koshy
 Basic           elias           Elias Pschernig
+C#              elliotth        Elliott Hughes
 Java            elliotth        Elliott Hughes
 JavaScript      dfishburn       David Fishburn
 Perl            perlguy0        Dmitri Tikhonov
